--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
-<h3>Home</h3>
-<% @users.each do |user| %>
-  <p>User: <%=link_to user.name, user %></p>
-<% end %>
+<div class="span12 text-center">
+<h1>Find Great Venues near you</h1>
+<br>
+<form class="form-search search-bar">
+  <div class="input-append">
+    <input type="text" class="search-query" placeholder="Enter a suburb">
+    <button type="submit" class="btn btn-primary">
+    Find Venues <i class="icon-search icon-white"></i></button>
+  </div>
+</form>
+</div>
