--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.search-bar {
+    text-align: center; /* centers inline and inline-block children */
+}
+.search-bar .search-query,
+.search-bar .btn-primary {
+    display: inline-block; /* allows for heights to be set */
+}
+.search-bar .search-query {
+    height: 40px;
+    width: 600px;
+}
+.search-bar .btn-primary {
+    height: 50px;
+}
