--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,14 @@
 <%= link_to "Meetspace", root_path, :class => 'brand' %>
-<ul class="nav">
+<ul class="nav pull-right">
+  <% if user_signed_in? %>
+    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <li><%= link_to 'Edit venues', venues_path %></li>
+        <li><%= link_to 'Create new venue', new_venue_path %></li>
+        <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+      </ul></li>
+<% end %>
+
   <% if user_signed_in? %>
     <li>
     <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
@@ -10,9 +19,6 @@
     </li>
   <% end %>
   <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Edit account', edit_user_registration_path %>
-    </li>
     <% if current_user.has_role? :admin %>
       <li>
       <%= link_to 'Admin', users_path %>
