--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,13 @@
 <div class="span12 text-center">
 <h1>Find Great Venues near you</h1>
 <br>
-<form class="form-search search-bar">
-  <div class="input-append">
-    <input type="text" class="search-query" placeholder="Enter a suburb">
-    <button type="submit" class="btn btn-primary">
-    Find Venues <i class="icon-search icon-white"></i></button>
-  </div>
-</form>
-</div>
+
+<%= form_tag venue_locations_path, :method => :get, :class => 'form-search search-bar' do %>
+	<div class="input-append">
+    <%= text_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
+   
+    <%= button_tag :class => "btn btn-primary" do %>
+    	Find venues <i class="icon-search icon-white"></i>
+    <% end %>
+
+<% end %>
