--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,6 +9,9 @@
       </ul></li>
 <% end %>
 
+  <li><%= link_to 'Venue Locations', venue_locations_path %></li>
+
+
   <% if user_signed_in? %>
     <li>
     <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
