--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,39 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-  <body>
-    <div id="container">
-      
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <% end %>
-      <%= content_tag :h1, yield(:title) if show_title? %>
+<body class="<%= controller_name %> <%= action_name %>">
+    <div class="navbar navbar-fixed-top">
+      <nav class="navbar-inner">
+        <div class="container">
 
-      <%= yield %>
+          <%= render 'layouts/navigation' %>
 
-
+        </div>
+      </nav>
     </div>
 
+    <div id="main" role="main">
+      <div class="container">
+           <div class="row">
+            <div class="span12">
+
+              <%= render 'layouts/messages' %>
+
+              <div id="container">
+                <% flash.each do |name, msg| %>
+                  <%= content_tag :div, msg, :id => "flash_#{name}" %>
+                <% end %>
+                <%= content_tag :h1, yield(:title) if show_title? %>
+
+                <%= yield %>
+             </div>
+            </div>
+          </div>
+          <footer>
+          </footer>
+      </div> <!--! end of .container -->
+    </div> <!--! end of #main -->
+    
     <%= yield :scripts %>
 
   </body>
