--- a/app/views/venue_locations/index.html.erb
+++ b/app/views/venue_locations/index.html.erb
@@ -1,5 +1,20 @@
 <% title "Venue Locations" %>
 
+
+<div class="row">
+
+<div class="span7">
+
+<%= gmaps4rails(@json) %>
+
+</div>
+
+<div class="span2">
+
+</div>
+
+<div class="span3">
+
 <%= form_tag venue_locations_path, :method => :get do %>
   <p>
     <%= label_tag :search, "Address" %>
@@ -31,7 +46,9 @@
 
 <p><%= link_to "New Venu Location", new_venue_location_path %></p>
 
-<%= gmaps4rails(@json) %>
+</div>
+
+</div>
 
 <script type="text/javascript">
   $(document).ready(function() {
