--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,14 @@
 <%= form_tag venue_locations_path, :method => :get, :class => 'form-search search-bar' do %>
 	<div class="input-append">
     <%= text_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
-   
     <%= button_tag :class => "btn btn-primary" do %>
     	Find venues <i class="icon-search icon-white"></i>
     <% end %>
+
+<div class="span12 text-center">
+	<br>
+    <%= label_tag :radius, "Radius: " %>
+    <%= text_field_tag :radius, params[:radius], :id => 'filtered-pop' %>
+</div>
 
 <% end %>
