--- a/app/views/venue_locations/index.html.erb
+++ b/app/views/venue_locations/index.html.erb
@@ -1,7 +1,19 @@
 <% title "Venue Locations" %>
-
+<div class ="row">
+  <div class = "span12">
+    <%= form_tag venue_locations_path, :method => :get do %>
+      <p>
+        <%= text_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
+        <%= text_field_tag :radius, params[:radius], :id => 'filtered-pop', :class => 'search-query' %>
+        <div id='population-range' style="width: 500px"></div>
+        <%= submit_tag "Search", :name => nil %>
+      </p>
+    <% end %>
+  </div>
+</div>
 
 <div class="row">
+
 
 <div class="span7">
 
@@ -14,17 +26,6 @@
 </div>
 
 <div class="span3">
-
-<%= form_tag venue_locations_path, :method => :get do %>
-  <p>
-    <%= label_tag :search, "Address" %>
-    <%= text_field_tag :search, params[:search] %>
-    <%= label_tag :radius, "Radius" %>
-    <%= text_field_tag :radius, params[:radius], :id => 'filtered-pop' %>
-    <div id='population-range' style="width: 500px"></div>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %>
 
 <table>
   <tr>
@@ -58,7 +59,8 @@
         min: 1
       };
 
-      $( "#filtered-pop" ).val(PopulationFilter.min)
+      // $( "#filtered-pop" ).val(PopulationFilter.min)
+      $( "#filtered-pop" ).val("Enter radius in miles here..")
       $("#population-range").slider({
         range: false,
         min: PopulationFilter.min,
