before trying to get venue list on locations wall

--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
     <%= f.input :name, :label => "Business name" %>
-    <%= f.input :location, :label => "Address" %>
+    <%= f.input :address, :label => "Address" %>
     <%= f.input :avatar, :label => "Image", :as => :file %>
     <%= f.input :about, :input_html => { :rows => 10 } %>
     <%= f.input :manager, :label => "Manger's name" %>
