--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -5,7 +5,9 @@
 	<p><small><%= @venue.tag_list %></small></p>
 	<div class="row">
 		<div class="span4">
-			<b>Location: </b><p><%= @venue.location %></p>
+			<b>Address: </b><p><%= @venue.address %></p>
+			<b>Temp lat/long : remove this <%= @venue.latitude %>
+			<%= @venue.longitude %> </b>
 
 			<b>Description: </b><p><%= @venue.about %></p>
 
@@ -49,5 +51,5 @@
 
 
 
-
+<%= gmaps4rails(@json) %>
 
