--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,6 +2,6 @@
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
-a:hover {
-text-decoration: none;
+body {
+	background-image: url(handmadepaper.png)
 }
