--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .search-bar {
-    text-align: center; /* centers inline and inline-block children */
+    text-align: center; /* centers inline and inline-block children ≈
 }
 .search-bar .search-query,
 .search-bar .btn-primary {
@@ -15,3 +15,8 @@
 .search-bar .btn-primary {
     height: 50px;
 }
+
+/*body{
+	background-image: url(Venue.jpg);
+	background-repeat: none
+}*/
