--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,7 @@
 <%= link_to "Meetspace", root_path, :class => 'brand' %>
+<ul class="nav">
+  <li><%= link_to 'Venues', list_path %></li>
+</ul>
 <ul class="nav pull-right">
   <% if user_signed_in? %>
     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
@@ -6,6 +9,7 @@
         <li><%= link_to 'Edit venues', venues_path %></li>
         <li><%= link_to 'Create new venue', new_venue_path %></li>
         <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+        <li><%= link_to 'Inbox', enquirers_path %></li>
       </ul></li>
 <% end %>
 
