--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -1,16 +1,23 @@
+<div class ="well span10">
 <%= simple_form_for(@venue) do |f| %>
   <%= f.error_notification %>
-
-    <%= f.input :name, :label => "Business name" %>
-    <%= f.input :location, :label => "Address" %>
-    <%= f.input :avatar, :label => "Image", :as => :file %>
-    <%= f.input :about, :input_html => { :rows => 10 } %>
+    <div class="row">
+        <div class="span4">
+        <%= f.input :name, :label => "Business name" %>
+        <%= f.input :location, :label => "Address" %>
+        <%= f.input :avatar, :label => "Image", :as => :file %>
+        <%= f.input :about, :input_html => { :rows => 10 } %>
+        </div>
+    <div class="span5">
     <%= f.input :manager, :label => "Manger's name" %>
     <%= f.input :tag_list, :label => 'Tags:' %>
     <%= f.input :phone %>
     <%= f.input :email %>
     <%= f.input :website %>
 
-    <%= f.button :submit, :class => 'btn btn-large btn-success' %>
-
+    <%= f.button :submit, :class => 'btn btn-large btn-primary' %>
+    </div>
+</div>
 <% end %>
+<%= link_to 'Back', venues_path %>
+</div>
