--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 
 <h2><%= @venue.name %></h2>
-	<p><small><%= @venue.tag_list %></small></p>
+	<p><span class="label label-info"><%= @venue.tag_list %></span></p>
 	<div class="row">
 		<div class="span4">
 			<b>Location: </b><p><%= @venue.location %></p>
@@ -11,7 +11,7 @@
 
 			<b>Phone: </b><p><%= @venue.phone %></p>
 
-			<b>Website:</b> <p><%= @venue.website %></p>
+			<b>Website:</b> <p><%= auto_link @venue.website %></p>
 			<b>Manager: </b><p><%= @venue.manager %></p>
 		</div>
 
@@ -21,33 +21,21 @@
 	</div>
 </form>
 
-<form class="well span10">
+<div class ="well span10">
+<%= simple_form_for(Enquirer.new) do |f| %>
+  	<%= f.error_notification %>
 	<h4>Contact <%= @venue.manager %></h4>
   <div class="row">
 		<div class="span4">
-			<label>Full Name</label>
-			<input type="text" class="span3" placeholder="Your Name">
-			<label>Email Address</label>
-			<input type="text" class="span3" placeholder="Your email address">
-          	<label>Subject</label>
-			<select id="subject" name="subject" class="span3">
-				<option value="na" selected="">Choose One:</option>
-				<option value="booking">Bookings</option>
-				<option value="service">General Customer Service</option>
-			</select>
+			<%= f.input :name, :input_html => { :class => "span3"}, :placeholder => "Your name", :autofocus => true, :required => true %>
+			<%= f.input :email, :input_html => { :class => "span3"}, :placeholder => "Your email",:required => true %>
 		</div>
 		<div class="span5">
-			<label>Message</label>
-			<textarea name="message" id="message" class="input-xlarge span5" rows="10"></textarea>
-			<button type="submit" class="btn btn-primary">Send</button>
+			<%= f.input :message, :input_html => { :rows => 10, :class => "span5"}, :required => true %>
+			<%= f.button :submit, :class =>'btn btn-primary' %>
 		</div>
 	</div>
-
-<%= link_to 'Edit', edit_venue_path(@venue) %> |
-<%= link_to 'Back', venues_path %>
-</form>
-
-
-
+	<% end %>
+</div>
 
 
