--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -38,7 +38,7 @@
 		        <p></p>
 		        <p>
 		          <i class="icon-user"></i> by <%= venue.manager %>
-		          | <i class="icon-map-marker"></i> <%= venue.location %> 
+		          | <i class="icon-map-marker"></i> <%= venue.address %> 
 		          | <i class="icon-globe"></i> <%= auto_link venue.website %>
 		          | <i class="icon-tags"></i> Tags : 
 		          <a href="#"><span class="label label-info"><%= venue.tag_list %></span></a> 
