--- a/app/views/enquirers/show.html.erb
+++ b/app/views/enquirers/show.html.erb
@@ -1,20 +1,12 @@
 <div class="well span10">
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @enquirer.name %>
-</p>
+  <p><b>From:</b> <%= @enquirer.name.capitalize %></p>
+  <p><b>Date:</b> <%= @enquirer.created_at.strftime("%A, %e %b %Y") %></p> 
+  <p><b>Email:</b> <%= auto_link @enquirer.email %></p>
+  
 
-<p>
-  <b>Email:</b>
-  <%= @enquirer.email %>
-</p>
-
-<p>
-  <b>Message:</b>
-  <%= @enquirer.message %>
-</p>
+  <p><b>Message:</b> <%= @enquirer.message %></p>
 
 <%= link_to 'Back', enquirers_path %>
 </div>
