--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -5,3 +5,12 @@ body { padding-top: 60px; }
 body {
 	background-image: url(handmadepaper.png)
 }
+
+.search {
+height:200;
+width:100;
+position: absolute;
+top:50%;
+margin-top: -100px;
+margin-left: -50px;
+}
