--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,26 @@
-<h2>Sign up</h2>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :required => true %>
-  <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, 'Sign up', :class => 'btn-primary' %>
-<% end %>
-<%= render "devise/shared/links" %>
+<div class ="well span10">
+  <div class="row">
+		<div class="span5">
+			<h3>Sign in</h3>
+			<%= simple_form_for(resource, :as => resource_name, :url => session_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
+			<%= f.input :email, :autofocus => true %>
+			<%= f.input :password %>
+			<%= f.input :remember_me, :as => :boolean if devise_mapping.rememberable? %>
+			<%= f.button :submit, "Sign in", :class => 'btn-primary' %>
+			<% end %>
+			<%= render "devise/shared/links" %>
+		</div>
+		<div class="span5">
+			<h3>Sign up</h3>
+			<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
+			  <%= f.error_notification %>
+			  <%= display_base_errors resource %>
+			  <%= f.input :name %>
+			  <%= f.input :email, :required => true %>
+			  <%= f.input :password, :required => true %>
+			  <%= f.input :password_confirmation, :required => true %>
+			  <%= f.button :submit, 'Sign up', :class => 'btn-success' %>
+			<% end %>
+		</div>
+	</div>
+</div>
