--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,33 +4,24 @@
 </ul>
 <ul class="nav pull-right">
   <% if user_signed_in? %>
-    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
+    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b>
+    </a>
       <ul class="dropdown-menu">
+        <li><%= link_to 'Inbox', enquirers_path %></li>
         <li><%= link_to 'Edit venues', venues_path %></li>
         <li><%= link_to 'Create new venue', new_venue_path %></li>
         <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-        <li><%= link_to 'Inbox', enquirers_path %></li>
+        <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
       </ul></li>
 <% end %>
 
   <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
-    </li>
-  <% else %>
-    <li>
-    <%= link_to 'Login', new_user_session_path %>
-    </li>
-  <% end %>
-  <% if user_signed_in? %>
     <% if current_user.has_role? :admin %>
-      <li>
-      <%= link_to 'Admin', users_path %>
-      </li>
+      <li><%= link_to 'Admin', users_path %></li>
     <% end %>
   <% else %>
     <li>
-    <%= link_to 'Sign up', new_user_registration_path %>
+    <%= link_to 'Login / Sign up', new_user_registration_path %>
     </li>
   <% end %>
 </ul>
