--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,10 +1,33 @@
+<style type="text/css">
+
+.map_container {
+  padding: 6px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #ccc #ccc #999 #ccc;
+  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+  width: 400px;
+
+}
+
+.gmaps4rails_map {
+  width: 400px;
+  height: 300px;
+
+}
+
+</style>
+
+
 <form class="well span10">
 <p id="notice"><%= notice %></p>
 
-<h2><%= @venue.name %></h2>
-	<p><span class="label label-info"><%= @venue.tag_list %></span></p>
 	<div class="row">
-		<div class="span4">
+		<div class="span5">
+			<h2><%= @venue.name %></h2>
+			<p><span class="label label-info"><%= @venue.tag_list %></span></p>
 			<b>Address: </b><p><%= @venue.address %></p>
 
 			<b>Description: </b><p><%= @venue.about %></p>
@@ -15,11 +38,18 @@
 			<b>Manager: </b><p><%= @venue.manager %></p>
 		</div>
 
-		<div class="span6">
-			<p><%= image_tag @venue.avatar.thumb %></p>
+		<div class="span5">
+			<%= gmaps4rails(@json) %>
 		</div>
 	</div>
 </form>
+
+<div class="well span6">
+	<% if @venue.avatar? %>
+	<p><%= image_tag @venue.avatar.thumb %></p>
+	<% end %>
+</div>
+
 
 <div class ="well span10">
 <%= simple_form_for(Enquirer.new) do |f| %>
@@ -43,7 +73,7 @@
 
 
 
-<%= gmaps4rails(@json) %>
+
 
 
 </div>
