--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -6,11 +6,14 @@
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+/*  width: 400px;*/
   width: 800px;
 }
 
 .gmaps4rails_map {
-  width: 800px;
+/*  width: 400px;
+  height: 300px;*/
+    width: 800px;
   height: 400px;
 }
 
@@ -22,6 +25,8 @@
    height: 400px;
    border:#555555 2px solid;
 }
+
+
 
 #map label { width: auto; display:inline; }
 #map img { max-width: none; }
