--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,12 +8,9 @@
     <%= button_tag :class => "btn btn-primary" do %>
     	Find venues <i class="icon-search icon-white"></i>
     <% end %>
-
-<div class="span12 text-center">
-	<br>
-    <%= label_tag :radius, "Radius: " %>
-    <%= text_field_tag :radius, params[:radius], :id => 'filtered-pop' %>
+	<% end %>
+	</div>
 </div>
 
-<% end %>
+
 
