--- a/app/views/venue_locations/index.html.erb
+++ b/app/views/venue_locations/index.html.erb
@@ -1,4 +1,4 @@
-<% title "Venue Locations" %>
+
 <div class ="row">
   <div class = "span12">
     <%= form_tag venue_locations_path, :method => :get do %>
@@ -13,36 +13,55 @@
 </div>
 
 <div class="row">
-
-
-
-<div class="span7">
-
-<%= gmaps4rails(@json) %>
-
+  <div class="span7">
+    <%= gmaps4rails(@json) %>
+  </div>
+  <div class="span2">
+  </div>
+  <div class="span3">
+    <h5>Nearest venues to <%= params[:search] %>:</h5>
+    <% if @search_location %>
+      <ul>
+      <% for venue in @search_location.nearbys(1000) %>
+        <div class="row">
+          <div class="span8">
+            <h4><%= link_to venue.name, venue %></h4>
+            <h6>(<%= venue.distance.round(2) %> miles)</h6> 
+          </div>
+        </div>
+        <div class="row">
+          <div class="span2">
+            <a href="#" class="thumbnail">
+              <%= image_tag venue.avatar.thumb %>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span8">
+            <p>
+              <i class="icon-map-marker"></i> <%= venue.address %><br>
+              <% if venue.website? %>
+                <i class="icon-globe"></i> <%= auto_link venue.website %><br> 
+              <% end %>
+              <% if !venue.tag_list.empty? %>
+                <i class="icon-tags"></i> Tags : 
+                <a href="#"><span class="label label-info"><%= venue.tag_list %></span></a>
+              <% end %>
+            </p>
+          </div>
+        </div>
+      <% end %>
+      </ul>
+    <% end %>
+  </div>
 </div>
 
-<div class="span2">
-
-</div>
-
-<div class="span3">
 
 
 
-<h5>Nearest venues to <%= params[:search] %>:</h5>
-<% if @search_location %>
-  <ul>
-  <% for venue in @search_location.nearbys(1000) %>
-    <li><%= link_to venue.name, venue %> (<%= venue.distance.round(2) %> miles)</li>
-  <% end %>
-  </ul>
-<% end %>
 
 
-</div>
 
-</div>
 
 <script type="text/javascript">
   $(document).ready(function() {
