--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -27,7 +27,7 @@
         <p>
           <i class="icon-user"></i> by <a href="#"><%= venue.manager %></a>
           | <i class="icon-map-marker"></i> <%= venue.address %> 
-          | <i class="icon-globe"></i> <%= auto_link venue.website %>
+          | <i class="icon-globe"></i> <%= auto_link(venue.website, :all, :target => '_blank') %>
 
           | <i class="icon-tags"></i> Tags : 
           <a href="#"><span class="label label-info"><%= venue.tag_list %></span></a> 
@@ -43,5 +43,3 @@
 
 <div><%= link_to 'Add New Venue', new_venue_path, :class =>'btn btn-primary' %></div>
 </form>
-
-<%= gmaps4rails(@json) %>
