--- a/app/views/venue_locations/nearby_venues/_nearby_venues_bar.html.erb
+++ b/app/views/venue_locations/nearby_venues/_nearby_venues_bar.html.erb
@@ -15,7 +15,7 @@
         <% end %>
         <% if !venue.tag_list.empty? %>
           <i class="icon-tags"></i> Tags : 
-          <a href="#"><span class="label label-info"><%= venue.tag_list %></span></a>
+          <span class="label label-info"><%= venue.tag_list %></span>
         <% end %>
       </p>
     <% end %>
