--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Meetspace", root_path, :class => 'brand' %>
 <ul class="nav">
   <li><%= link_to 'Venues', list_path %></li>
+  <li><%= link_to 'Map', venue_locations_path %></li>
 </ul>
 <ul class="nav pull-right">
   <% if user_signed_in? %>
@@ -14,10 +15,6 @@
         <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
       </ul></li>
 <% end %>
-
-  <li><%= link_to 'Venue Locations', venue_locations_path %></li>
-
-
 
   <% if user_signed_in? %>
     <% if current_user.has_role? :admin %>
