--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -1,17 +1,6 @@
 <div class="well span10">
 <div class="row">
-	<div class="span2">
-		<ul style="list-style-type: none">
-			<b>Venues</b>
-			<li>All</li>
-			<li>Bars</li>
-			<li>Cafes</li>
-			<li>Hotels</li>
-			<li>Offices</li>
-		</ul>
-	</div>
-
-
+	<div class="span3">	
 	<div class="span5">
 		<h3>Featured Venues</h3>
 		<hr>
@@ -41,7 +30,7 @@
 		          | <i class="icon-map-marker"></i> <%= venue.address %> 
 		          | <i class="icon-globe"></i> <%= auto_link(venue.website, :all, :target => '_blank') %>
 		          | <i class="icon-tags"></i> Tags : 
-		          <a href="#"><span class="label label-info"><%= venue.tag_list %></span></a> 
+		          <span class="label label-info"><%= venue.tag_list %></span> 
 		        </p>
 		      </div>
 		    </div>
@@ -49,5 +38,6 @@
 		</div>
 		<hr>
 		<% end %>
+	</div>
 	</div>
 </div>
