--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -25,12 +25,11 @@
       <div class="span8">
         <p></p>
         <p>
-          <i class="icon-user"></i> by <a href="#"><%= venue.manager %></a>
+          <i class="icon-user"></i> by <%= venue.manager %>
           | <i class="icon-map-marker"></i> <%= venue.address %> 
           | <i class="icon-globe"></i> <%= auto_link(venue.website, :all, :target => '_blank') %>
-
           | <i class="icon-tags"></i> Tags : 
-          <a href="#"><span class="label label-info"><%= venue.tag_list %></span></a> 
+          <span class="label label-info"><%= venue.tag_list %></span> 
         </p>
       </div>
     </div>
@@ -38,8 +37,6 @@
 </div>
 <hr>
 <% end %>
-
 <br />
-
 <div><%= link_to 'Add New Venue', new_venue_path, :class =>'btn btn-primary' %></div>
 </form>
