--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
         <%= text_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
         <%= hidden_field_tag :radius, 1 %>
         <%= button_tag :class => "btn btn-primary" do %>
-          Search again <i class="icon-search icon-white"></i>
+          Find Venues <i class="icon-search icon-white"></i>
         <% end %>
       </div>
       <br>
