--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="search span12 text-center">
-<h1>Find Great Venues near you</h1>
+<h1 style="color:#fff">Find Great Venues near you</h1>
 <br>
     <%= form_tag venue_locations_path, :method => :get, :class => 'form-search search-bar' do %>
       <div class="input-append">
