--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,7 @@
 <div class="search span12 text-center">
-<h1>Find Great Venues near you</h1>
-<br>
-
-    <%= form_tag venue_locations_path, :method => :get, :class => 'form-search search-bar' do %>
-      <div class="input-append">
-        <%= text_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
-        <%= hidden_field_tag :radius, 1 %>
-        <%= button_tag :class => "btn btn-primary" do %>
-          Find Venues <i class="icon-search icon-white"></i>
-        <% end %>
-      </div>
-      <br>
-      <br>
-    <% end %>
-
+	<h1>Find Great Venues near you</h1>
+	<br>
+	<%= render 'home/search' %>
 </div>
 
 
