--- a/app/views/venue_locations/index.html.erb
+++ b/app/views/venue_locations/index.html.erb
@@ -1,17 +1,12 @@
 <div class="row">
 
   <div class="span7">
-    <%= form_tag venue_locations_path, :method => :get, :class => 'form-search search-bar' do %>
-      <div class="input-append">
-        <%= text_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
-        <%= button_tag :class => "btn btn-primary" do %>
-          Search again <i class="icon-search icon-white"></i>
-        <% end %>
-      </div>
-      <p>Expand your search radius (in miles..)</p>
-        <%= text_field_tag :radius, params[:radius], :id => 'filtered-pop', :style => "width: 30px" %>
-        <div id='population-range' style="width: 500px; float:right"></div>
-    <% end %>
+
+
+    <%= render 'home/search' %>
+
+
+
 
     <%= gmaps4rails(@json) %>
 
