--- a/app/views/venue_locations/nearby_venues/_nearby_venues_bar.html.erb
+++ b/app/views/venue_locations/nearby_venues/_nearby_venues_bar.html.erb
@@ -43,7 +43,7 @@
 <% end %>
 
 <div class="digg_pagination">
-  <%= will_paginate @venues, :container => false %>
+  <%= will_paginate @venues, :container => false, :params => { :my_excluded_param => nil } %>
 </div>
 <div class="page_info">
   <%= page_entries_info @venues %>
