--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,7 +3,8 @@ body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 body {
-	background-image: url(handmadepaper.png)
+	background-image: url(handmadepaper.png);
+	font-family: 'Fresca', sans-serif;
 }
 
 .search {
