--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="search span12 text-center">
-	<h1>Find Great Venues near you</h1>
+	<h1 style="color: #F20C0C;">Find Great Venues near you</h1>
 	<br>
 	<%= render 'home/search' %>
 </div>
