--- a/app/views/venue_locations/index.html.erb
+++ b/app/views/venue_locations/index.html.erb
@@ -1,26 +1,13 @@
-<div class="row">
-
+<div class="row-fluid">
+  <div class="container">
   <div class="span7">
-
-
     <%= render 'home/search' %>
-
-
-
-
     <%= gmaps4rails(@json) %>
-
   </div>
-
-  <div class="span2">
-  </div>
-
-  <div class="span3" id="#venues_bar">
-
+  <div class="span3 offset2" id="#venues_bar">
     <%= render 'venue_locations/nearby_venues/nearby_venues_bar' %>
-
+    </div>
   </div>
-
 </div>
 
 
