--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -26,7 +26,7 @@
 
 	<div class="row">
 		<div class="span5">
-			<h2><%= @venue.name %></h2>
+			<h2 style="color: #F20C0C;"><%= @venue.name %></h2>
 			<p><span class="label label-info"><%= @venue.tag_list %></span></p>
 			<b>Address: </b><p><%= @venue.address %></p>
 
