--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
+<style type="text/css">a{color:#F20C0C;}</style>
+
 <div class="search span12 text-center">
-	<h1 style="color: #F20C0C;">Find Great Venues near you</h1>
+	<h1 style="color: #F20C0C;">Find a Great Spot to <a href="http://australia.meetup.com/" target="_blank">Meetup</a></h1>
 	<br>
 	<%= render 'home/search' %>
 </div>
