--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,8 +3,15 @@ body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 body {
+
 	background-image: url(handmadepaper.png);
-	font-family: 'Fresca', sans-serif;
+
+/*	background: url(wallTexture2.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	font-family: 'Fresca', sans-serif;*/
 }
 
 .search {
