--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,9 @@
 <%= link_to "SpotHunt", root_path, :class => 'brand', :style => "font-family: 'Sarina', cursive; font-size: 45px; color: #F20C0C;" %>
-<ul class="nav">
-  <li><%= link_to 'Venues', list_path %></li>
-</ul>
+<%= image_tag "spotHunt.png", :style => "width: 40px;" %>
 <ul class="nav pull-right">
+  <ul class="nav">
+    <li><%= link_to 'Venues', list_path %></li>
+  </ul>
   <% if user_signed_in? %>
     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b>
     </a>
