--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Meetspace", root_path, :class => 'brand' %>
+<%= link_to "SpotHunt", root_path, :class => 'brand' %>
 <ul class="nav">
   <li><%= link_to 'Venues', list_path %></li>
   <li><%= link_to 'Map', venue_locations_path %></li>
