--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Meetspace" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "SpotHunt" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Meetspace" %>">
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
@@ -23,10 +23,6 @@
             <div class="span12">
               <%= render 'layouts/messages' %>
               <div id="container">
-                <% flash.each do |name, msg| %>
-                  <%= content_tag :div, msg, :id => "flash_#{name}" %>
-                <% end %>
-                <%= content_tag :h1, yield(:title) if show_title? %>
                 <%= yield %>
              </div>
             </div>
