--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,6 +1,4 @@
 <form class="well span10">
-<p id="notice"><%= notice %></p>
-
 	<h2><%= @venue.name %></h2>
 	<div class="row">
 		<div class="span5">
@@ -34,7 +32,7 @@
 	<h4>Contact <%= @venue.manager %></h4>
   <div class="row">
 		<div class="span4">
-			<%= f.input :name, :input_html => { :class => "span3"}, :placeholder => "Your name", :autofocus => true, :required => true %>
+			<%= f.input :name, :input_html => { :class => "span3"}, :placeholder => "Your name", :required => true %>
 			<%= f.input :email, :input_html => { :class => "span3"}, :placeholder => "Your email",:required => true %>
 		</div>
 		<div class="span5">
