--- a/app/views/directions/index.html.erb
+++ b/app/views/directions/index.html.erb
@@ -2,11 +2,10 @@
   <div class="container">
   <div class="span7">
     <%= render 'home/search' %>
-    <%= render 'venue_locations/gmaps' %>
+	<%= render 'directions/gmaps_direction' %>
   </div>
   <div class="span3 offset2" id="#venues_bar">
     <%= render 'venue_locations/nearby_venues/nearby_venues_bar' %>
     </div>
   </div>
 </div>
-
