--- a/app/views/venue_locations/nearby_venues/_nearby_venues_bar.html.erb
+++ b/app/views/venue_locations/nearby_venues/_nearby_venues_bar.html.erb
@@ -2,6 +2,15 @@
   <h5>Nearest venues to <%= params[:search] %>:</h5>
     <% for venue in @search_location.nearbys(50000).paginate(:page => params[:page], :per_page => 6) %>
       <h4><%= link_to venue.name, venue, :style => 'color: #F20C0C;' %></h4>
+
+      <%= form_tag directions_path, :method => :get, :class => 'button' do %>
+        <div class="input-append">
+          <%= hidden_field_tag :search, params[:search], :class => 'search-query', :placeholder => 'Enter a suburb' %>
+          <%= hidden_field_tag :venue_address, venue.address, :class => 'search-query', :placeholder => 'Enter a suburb' %>
+          <%= button_tag "Directions" %>
+        </div>
+      <% end %>
+
       <% if venue.avatar? %>
         <a href="#" class="thumbnail">
           <%= image_tag venue.avatar.thumb %>
