--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,10 @@
-<%= link_to "SpotHunt", root_path, :class => 'brand' %>
-<ul class="nav">
-  <li><%= link_to 'Venues', list_path %></li>
-  <li><%= link_to 'Map', venue_locations_path %></li>
-</ul>
+<%= link_to "SpotHunt", root_path, :class => 'brand', :style => "font-family: 'Sarina', cursive; font-size: 35px; color: #FFF;" %> <!--color: #F20C0C;-->
+<%= image_tag "spotHunt.png", :style => "width: 30px; padding-top: 5px; margin-left: -5px;" %>
+
 
 <ul class="nav pull-right">
+  <li><%= link_to 'Venues', list_path %></li>
+  <li><%= link_to 'Map', venue_locations_path %></li>
   <% if user_signed_in? %>
     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b>
     </a>
