--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="row">
       <div class="span2">
-        <% if venue.avatart? %>
+        <% if venue.avatar? %>
           <div class="thumbnail">
               <%= image_tag venue.avatar.thumb %>
           </div>
