direction well and BG image size

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,7 +17,7 @@
 }
 
 .home {
-  background: url(venue3.jpg) no-repeat center center fixed; 
+  background: url(HomePageBackground.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
